// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List component Initial rendering should render List correctly 1`] = `
<List
  doSelectOnNavigate={false}
  isControlledNavigation={false}
  isDivided={false}
>
  <ul
    className="List"
    onKeyDown={[Function]}
    tabIndex="0"
  >
    <ListItem
      className="List__item"
      disabled={false}
      highlightContext="default"
      isHighlighted={false}
      isSelected={false}
      key=".0"
    >
      <li
        className="ListItem List__item"
      >
        <div
          className="ListItem__container"
          role="presentation"
        >
          <Text
            context="default"
            inline={true}
            key=".0"
            size="normal"
          >
            <span>
              Item 1
            </span>
          </Text>
        </div>
      </li>
    </ListItem>
    <ListItem
      className="List__item"
      disabled={false}
      highlightContext="default"
      isHighlighted={false}
      isSelected={false}
      key=".1"
    >
      <li
        className="ListItem List__item"
      >
        <div
          className="ListItem__container"
          role="presentation"
        >
          <Text
            context="default"
            inline={true}
            key=".0"
            size="normal"
          >
            <span>
              Item 2
            </span>
          </Text>
        </div>
      </li>
    </ListItem>
  </ul>
</List>
`;

exports[`List component Initial rendering should render List correctly without keyboard navigation 1`] = `
<List
  doSelectOnNavigate={false}
  isControlledNavigation={true}
  isDivided={false}
>
  <ul
    className="List"
  >
    <ListItem
      className="List__item"
      disabled={false}
      highlightContext="default"
      isHighlighted={false}
      isSelected={false}
      key=".0"
    >
      <li
        className="ListItem List__item"
      >
        <div
          className="ListItem__container"
          role="presentation"
        >
          <Text
            context="default"
            inline={true}
            key=".0"
            size="normal"
          >
            <span>
              Item 1
            </span>
          </Text>
        </div>
      </li>
    </ListItem>
    <ListItem
      className="List__item"
      disabled={false}
      highlightContext="default"
      isHighlighted={false}
      isSelected={false}
      key=".1"
    >
      <li
        className="ListItem List__item"
      >
        <div
          className="ListItem__container"
          role="presentation"
        >
          <Text
            context="default"
            inline={true}
            key=".0"
            size="normal"
          >
            <span>
              Item 2
            </span>
          </Text>
        </div>
      </li>
    </ListItem>
  </ul>
</List>
`;
